printing all important actions to user